--- a/src/main/resources/fxml/bangla_chapter_content.fxml
+++ b/src/main/resources/fxml/bangla_chapter_content.fxml
@@ -103,9 +103,9 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_1_8" disable="false" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_1_7" disable="true" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../ch_1_7_g.png" />
+                                <Image url="@../ch_1_7_l.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -117,7 +117,7 @@
                 </VBox>
             </children>
         </HBox>
-        <Label alignment="CENTER" prefHeight="16.0" prefWidth="800.0" style="-fx-background-color: #77577A;" text=" অধ্যায় ২- সুস্থ ও অসুস্থ শিশুর পরিচর্যা" textFill="WHITE">
+        <Label alignment="CENTER" prefHeight="16.0" prefWidth="598.0" style="-fx-background-color: #77577A;" text=" অধ্যায় ২- সুস্থ ও অসুস্থ শিশুর পরিচর্যা" textFill="WHITE">
             <font>
                 <Font size="25.0" />
             </font>
@@ -407,7 +407,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_2_quiz_2" disable="false" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_quiz_2" disable="true" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_2_21_lock.png" />
                             </image>
@@ -467,7 +467,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_3_quiz" disable="false" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_3_quiz" disable="true" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_3_4_g.png" />
                             </image>
@@ -478,7 +478,7 @@
         </HBox>
         <Pane prefHeight="58.0" prefWidth="800.0" style="-fx-background-color: #77577A;">
             <children>
-                <Button fx:id="back_button" layoutX="240.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#onMouseClicked" prefHeight="30.0" prefWidth="150.0" text="Log Out" />
+                <Button fx:id="back_button" layoutX="300.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#onMouseClicked" prefHeight="30.0" prefWidth="150.0" text="Log Out" />
             </children>
         </Pane>
     </children>
