--- a/src/main/resources/fxml/splash_screen.fxml
+++ b/src/main/resources/fxml/splash_screen.fxml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-
-
 <?import javafx.scene.layout.Pane?>
-<Pane fx:id="splashlayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="530.0" style="-fx-background-color: #df94e8;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.clientcollection.controller.FxViewController">
+<?import javafx.scene.text.Font?>
+
+<Pane fx:id="splashlayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #df94e8;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.clientcollection.controller.FxViewController">
    <children>
-      <ImageView fitHeight="393.0" fitWidth="229.0" layoutX="4.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="590.0" fitWidth="500.0" layoutX="4.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/splash_screen.png" />
          </image>
       </ImageView>
+      <Label layoutX="350.0" layoutY="300.0" text="CNCP E Learning">
+         <font>
+            <Font size="30">
+
+            </Font>
+         </font>
+      </Label>
    </children>
 </Pane>
